Fix broken css

--- a/src/css/unison-share/page/project-contribution-changes-page.css
+++ b/src/css/unison-share/page/project-contribution-changes-page.css
@@ -364,7 +364,7 @@
       display: flex;
       align-items: center;
       justify-content: flex-end;
-      position: sticky: left;
+      position: sticky;
       left: 0;
     }
 
